Masami's new text on damping ratio and generation time

--- a/docs/MPM_errors_manuscript/Bibliography.bib
+++ b/docs/MPM_errors_manuscript/Bibliography.bib
@@ -1,17 +1,3 @@
-@Article{Crouse1987,
-author = {Crouse, D. T. and Crowder, L. B. and Caswell, H. }, 
-title = {{A stage-based population model for loggerhead sea turtles and implications for conservation}}, 
-journal = {Ecology}, 
-volume = {68}, 
-issue = {}, 
-pages = {1412-1423}, 
-year = {1987}, 
-abstract = {}, 
-doi = {}, 
-location = {}, 
-keywords = {}}
-
-
 @Article{Crowder1994,
 author = {Crowder, L. B. and Crouse, D. T. and Heppell, S. S. and Martin, T. H. }, 
 title = {{Predicting the impact of turtle excluder devices on loggerhead sea turtle populations}}, 
@@ -121,6 +107,34 @@ address = {Sunderland, MA},
 year = {1989}, 
 abstract = {}, 
 keywords = {}}
+
+@Article{Bienvenu2015,
+author = {Bienvenu, F. and Legendre, S. }, 
+title = {{A new approach to the generation time in matrix population models}}, 
+journal = {Am Nat}, 
+volume = {185}, 
+issue = {6}, 
+pages = {834-843}, 
+year = {2015}, 
+abstract = {The generation time is commonly defined as the mean age of mothers at birth. In matrix population models, a general formula is available to compute this quantity. However, it is complex and hard to interpret. Here, we present a new approach where the generation time is envisioned as a return time in an appropriate Markov chain. This yields surprisingly simple results, such as the fact that the generation time is the inverse of the sum of the elasticities of the growth rate to changes in the fertilities. This result sheds new light on the interpretation of elasticities (which as we show correspond to the frequency of events in the ancestral lineage of the population), and we use it to generalize a result known as Lebreton's formula. Finally, we also show that the generation time can be seen as a random variable, and we give a general expression for its distribution.}, 
+doi = {10.1086/681104}, 
+location = {Unit{\'e} Mixte de Recherche 8197, Institut de Biologie de l'{\'E}cole Normale Sup{\'e}rieure (Centre National de la Recherche Scientifique, {\'E}cole Normale Sup{\'e}rieure), 46 Rue d'Ulm, 75230 Paris Cedex 05, France.}, 
+keywords = {}}
+
+
+@Article{Crouse1987,
+author = {Crouse, D. T. and Crowder, L. B. and Caswell, H. }, 
+title = {{A stage-based population model for loggerhead sea turtles and implications for conservation}}, 
+journal = {Ecology}, 
+volume = {68}, 
+issue = {}, 
+pages = {1412-1423}, 
+year = {1987}, 
+abstract = {}, 
+doi = {}, 
+location = {}, 
+keywords = {}}
+
 
 @Book{Caswell2001,
 author = {Caswell, H. }, 
