Updating of damping ratio and generation time sections

--- a/docs/MPM_errors_manuscript/Bibliography.bib
+++ b/docs/MPM_errors_manuscript/Bibliography.bib
@@ -149,3 +149,31 @@ year = {2001},
 abstract = {}, 
 keywords = {}}
 
+@Article{Salguero-Gomez2016a,
+author = {Salguero-G{\'o}mez, R. and Jones, O. R. and Jongejans, E. and Blomberg, S. P. and Hodgson, D. J. and Mbeau-Ache, C. and Zuidema, P. A. and de Kroon, H. and Buckley, Y. M. }, 
+title = {{Fast-slow continuum and reproductive strategies structure plant life-history variation worldwide.}}, 
+journal = {Proc. Natl. Acad. Sci. U. S. A.}, 
+volume = {113}, 
+issue = {1}, 
+pages = {230-235}, 
+year = {2016}, 
+abstract = {The identification of patterns in life-history strategies across the tree of life is essential to our prediction of population persistence, extinction, and diversification. Plants exhibit a wide range of patterns of longevity, growth, and reproduction, but the general determinants of this enormous variation in life history are poorly understood. We use demographic data from 418 plant species in the wild, from annual herbs to supercentennial trees, to examine how growth form, habitat, and phylogenetic relationships structure plant life histories and to develop a framework to predict population performance. We show that 55\% of the variation in plant life-history strategies is adequately characterized using two independent axes: the fast-slow continuum, including fast-growing, short-lived plant species at one end and slow-growing, long-lived species at the other, and a reproductive strategy axis, with highly reproductive, iteroparous species at one extreme and poorly reproductive, semelparous plants with frequent shrinkage at the other. Our findings remain consistent across major habitats and are minimally affected by plant growth form and phylogenetic ancestry, suggesting that the relative independence of the fast-slow and reproduction strategy axes is general in the plant kingdom. Our findings have similarities with how life-history strategies are structured in mammals, birds, and reptiles. The position of plant species populations in the 2D space produced by both axes predicts their rate of recovery from disturbances and population growth rate. This life-history framework may complement trait-based frameworks on leaf and wood economics; together these frameworks may allow prediction of responses of plants to anthropogenic disturbances and changing environments.}, 
+doi = {10.1073/pnas.1506215112}, 
+location = {}, 
+keywords = {}}
+
+
+@Article{Stott2016,
+author = {Stott, I. }, 
+title = {{Perturbation analysis of transient population dynamics using matrix projection models}}, 
+journal = {Methods Ecol Evol}, 
+volume = {7}, 
+issue = {6}, 
+pages = {666-678}, 
+year = {2016}, 
+abstract = {}, 
+doi = {10.1111/2041-210X.12543}, 
+location = {}, 
+keywords = {}}
+
+
