Caughley cite for "birth-pulse"

--- a/docs/MPM_errors_manuscript/Bibliography.bib
+++ b/docs/MPM_errors_manuscript/Bibliography.bib
@@ -177,3 +177,17 @@ location = {},
 keywords = {}}
 
 
+@Article{Caughley1967,
+author = {Caughley, G. }, 
+title = {{Parameters for seasonally breeding populations}}, 
+journal = {Ecology}, 
+volume = {48}, 
+issue = {5}, 
+pages = {834-839}, 
+year = {1967}, 
+abstract = {}, 
+doi = {10.2307/1933741}, 
+location = {}, 
+keywords = {}}
+
+
