Fix some hypothetical citations to Caswell

--- a/docs/MPM_errors_manuscript/Bibliography.bib
+++ b/docs/MPM_errors_manuscript/Bibliography.bib
@@ -191,3 +191,16 @@ location = {},
 keywords = {}}
 
 
+@Book{Coale1972,
+author = {Coale, A. J. }, 
+title = {The growth and structure of human populations: a mathematical approach}, 
+volume = {}, 
+pages = {}, 
+editor = {}, 
+edition = {}, 
+publisher = {Princeton University Press}, 
+address = {Princeton, NJ, USA}, 
+year = {1972}, 
+abstract = {}, 
+keywords = {}}
+
